<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/checklist_text_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/checklist_text_item_add"
        android:textSize="30sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/checklist_text_add"
        android:background="@color/checklistColorPrimary" />

    <TextView
        android:id="@+id/checklist_text_add_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_marginTop="10dp"
        android:text="@string/checklist_text_item_add_form"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/checklist_edit_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checklist_text_add_todo"
        android:layout_marginTop="10dp"
        android:hint="@string/checklist_text_item_default"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine|textPersonName" />


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/checklist_edit_add"
        android:layout_marginTop="10dp"
        android:background="@color/checklistColorPrimary" />

    <TextView
        android:id="@+id/checklist_text_add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginTop="10dp"
        android:text="@string/checklist_text_item_add_date_form"
        android:textSize="24sp" />

    <Button
        android:id="@+id/checklist_button_datepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checklist_text_add_date"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_roundcorner"
        android:text="@string/date_default"
        android:textSize="18sp"
        android:textColor="#FFFFFF"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@id/checklist_button_datepicker"
        android:layout_marginTop="10dp"
        android:background="@color/checklistColorPrimary" />

    <TextView
        android:id="@+id/checklist_text_add_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider3"
        android:layout_marginTop="10dp"
        android:text="@string/checklist_text_item_add_place_form"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/checklist_edit_add_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checklist_text_add_place"
        android:layout_marginTop="10dp"
        android:hint="@string/checklist_text_item_default"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine|textPersonName" />

</RelativeLayout>
</ScrollView>